fix some bugs && updated docs
